[package]
name = "fast-factor"
version = "0.1.3"
authors = ["BlobDieKatze"]
edition = "2024"
description = "A crate with relatively fast functions for factoring unsigned integers"
license = "MIT"
homepage = "https://crates.io/crates/fast-factor"
documentation = "https://docs.rs/fast-factor"
keywords = ["math", "factorization", "number-theory", "prime", "primes"]
categories = ["mathematics", "algorithms"]
readme = "README.md"

[dependencies]
num-integer = "0.1.46"
num-traits = "0.2.19"

[lib]
name = "fast_factor"
